--- a/Flask-React-Template/templates/static/package.json
+++ b/Flask-React-Template/templates/static/package.json
@@ -23,7 +23,9 @@
     "webpack-dev-server": "^3.7.1"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-pose": "^4.0.10"
   }
 }
