--- a/Flask-React-Template/templates/static/package.json
+++ b/Flask-React-Template/templates/static/package.json
@@ -26,6 +26,8 @@
     "classnames": "^2.2.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-pose": "^4.0.10"
+    "react-pose": "^4.0.10",
+    "react-responsive-carousel": "^3.1.51",
+    "recharts": "^1.8.5"
   }
 }
