--- a/Flask-React-Template/templates/static/package.json
+++ b/Flask-React-Template/templates/static/package.json
@@ -26,15 +26,15 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-pose": "^4.0.10",
-    "react-responsive-carousel": "^3.1.51",
-    "recharts": "^1.8.5",
     "d3": "^5.14.2",
     "igniteui-react-core": "^16.11.5",
     "igniteui-react-gauges": "^16.11.5",
     "prop-types": "^15.7.2",
-    "react-gauge-chart": "^0.2.4"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-gauge-chart": "^0.2.4",
+    "react-pose": "^4.0.10",
+    "react-responsive-carousel": "^3.1.51",
+    "recharts": "^1.8.5"
   }
 }
