--- a/Flask-React-Template/templates/static/package.json
+++ b/Flask-React-Template/templates/static/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "d3": "^5.14.2",
+    "igniteui-react-charts": "^16.11.5",
     "igniteui-react-core": "^16.11.5",
     "igniteui-react-gauges": "^16.11.5",
     "prop-types": "^15.7.2",
